kubernetes/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /(.*)
            backend:
              serviceName: client-svc
              servicePort: 3000
          - path: /api/(.*)
            backend:
              serviceName: server-svc
              servicePort: 5000
          - path: /websocket/(.*)
            backend:
              serviceName: server-svc
              servicePort: 5000
